3.Semantic.Analysis/test/semanal/error/error4_1_2_1.mod
module re_dec;

procedure f();
var a : integer;
    b, a : boolean;
begin

end f;

begin
    
end re_dec.
